examples/test/testpolicy1419.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1419
  namespace: namespace468
spec:
  podSelector:
    matchLabels:
      key4: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value13
          key19: value23
          key49: value21
      podSelector:
        matchLabels:
          key1: value13
          key10: value26
          key28: value11
